src/test/deca/syntax/valid/homemade/test/test_lex_val_plus_moins.deca
// Test d'un plus moins
{
    1+-100;
}