src/test/deca/syntax/invalid/homemade/test/test_lex_inv_tabu_in_reserved.deca
// Test tabulation au sein d'un mot reservé
{
    prin    tln();
}